Stop the carousel from having a crazy wide width w/scrollbars

--- a/app/assets/stylesheets/white_theme/playlists.scss
+++ b/app/assets/stylesheets/white_theme/playlists.scss
@@ -55,6 +55,7 @@ a.next, a.prev {
 
 #playlists_carousel {
   position: relative;
+  overflow: hidden;
   .prev {
     position: absolute;
     left: 0;
